--- a/src/index.css
+++ b/src/index.css
@@ -563,3 +563,18 @@ section{
 .light_dark_dark{
     background: #0f131c!important;
 }
+
+#faq.deep_dark .contact_box.box_1 *{
+    color: var(--primary-color)!important;
+}
+#faq.deep_dark .contact_box.box_1 p{
+    color: #fff!important;
+}
+
+
+#faq.deep_dark .contact_box.box_2 *{
+    color: #22C55E!important;
+}
+#faq.deep_dark .contact_box.box_2 p{
+    color: #fff!important;
+}
